--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,9 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta
-      name="description"
-      content="Web site created using create-react-app" />
+    <meta name="description" content="Web site created using create-react-app" />
 
-    <title>React App</title>
+    <title>BoombleGoom|Ecommerce</title>
   </head>
   <body>
     <div id="root"></div>
